# MatLogger2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_8md.html  README_8md_source.html  annotated.html  classDummyBackend-members.html  classDummyBackend.html  classMatLogger2_1_1MutexImpl-members.html  classMatLogger2_1_1MutexImpl.html  classMatLogger2_1_1MutexImpl__coll__graph.md5  classVariableBuffer_1_1QueueImpl-members.html  classVariableBuffer_1_1QueueImpl.html  classXBot_1_1MatAppender-members.html  classXBot_1_1MatAppender.html  classXBot_1_1MatLogger2-members.html  classXBot_1_1MatLogger2.html  classXBot_1_1MatLogger2__coll__graph.md5  classXBot_1_1VariableBuffer-members.html  classXBot_1_1VariableBuffer.html  classXBot_1_1VariableBuffer__coll__graph.md5  classXBot_1_1matlogger2_1_1Backend-members.html  classXBot_1_1matlogger2_1_1Backend.html  classXBot_1_1matlogger2_1_1Backend__inherit__graph.map  classXBot_1_1matlogger2_1_1MatioBackend-members.html  classXBot_1_1matlogger2_1_1MatioBackend.html  classXBot_1_1matlogger2_1_1condition__variable-members.html  classXBot_1_1matlogger2_1_1condition__variable.html  classXBot_1_1matlogger2_1_1mutex-members.html  classXBot_1_1matlogger2_1_1mutex.html  classXBot_1_1matlogger2_1_1thread-members.html  classXBot_1_1matlogger2_1_1thread.html  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer-members.html  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer.html  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base-members.html  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base.html  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base__coll__graph.md5  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base__inherit__graph.md5  classboost_1_1lockfree_1_1detail_1_1runtime__sized__ringbuffer-members.html  (+129 more)
.github/workflows/: build-and-test-ros1-focal.yml  build-and-test-ros2-noble.yml
bindings/python/: CMakeLists.txt  pyMatLogger2.cpp
cmake/: FindXenomai.cmake  generate_deb_pkg.cmake  xeno-build.cmake
doc/: CMakeLists.txt  Doxyfile.in  matlogger2.dox
doc/html/: annotated.html  classDummyBackend.html  classDummyBackend__coll__graph.md5  classMatLogger2_1_1MutexImpl-members.html  classMatLogger2_1_1MutexImpl.html  classMatLogger2_1_1MutexImpl__coll__graph.map  classVariableBuffer_1_1QueueImpl-members.html  classVariableBuffer_1_1QueueImpl.html  classVariableBuffer_1_1QueueImpl__coll__graph.map  classVariableBuffer_1_1QueueImpl__coll__graph.md5  classXBot_1_1MatAppender-members.html  classXBot_1_1MatAppender.html  classXBot_1_1MatAppender__coll__graph.map  classXBot_1_1MatLogger2-members.html  classXBot_1_1MatLogger2.html  classXBot_1_1MatLogger2__coll__graph.md5  classXBot_1_1VariableBuffer-members.html  classXBot_1_1VariableBuffer.html  classXBot_1_1VariableBuffer__coll__graph.map  classXBot_1_1matlogger2_1_1Backend-members.html  classXBot_1_1matlogger2_1_1Backend.html  classXBot_1_1matlogger2_1_1Backend__coll__graph.map  classXBot_1_1matlogger2_1_1Backend__coll__graph.md5  classXBot_1_1matlogger2_1_1MatioBackend.html  classXBot_1_1matlogger2_1_1MatioBackend__coll__graph.map  classXBot_1_1matlogger2_1_1MatioBackend__coll__graph.md5  classXBot_1_1matlogger2_1_1condition__variable-members.html  classXBot_1_1matlogger2_1_1condition__variable.html  classXBot_1_1matlogger2_1_1condition__variable__coll__graph.map  classXBot_1_1matlogger2_1_1condition__variable__coll__graph.md5  classXBot_1_1matlogger2_1_1mutex-members.html  classXBot_1_1matlogger2_1_1mutex.html  classXBot_1_1matlogger2_1_1mutex__coll__graph.map  classXBot_1_1matlogger2_1_1mutex__coll__graph.md5  classXBot_1_1matlogger2_1_1thread.html  classXBot_1_1matlogger2_1_1thread__coll__graph.md5  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer-members.html  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer.html  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer__inherit__graph.md5  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base-members.html  (+99 more)
docker/focal-ros1/: Dockerfile  compose.yml
docker/noble-ros2/: Dockerfile
docs/html/: classDummyBackend-members.html  classDummyBackend__coll__graph.map  classXBot_1_1MatAppender__coll__graph.md5  classXBot_1_1MatLogger2__coll__graph.map  classXBot_1_1matlogger2_1_1Backend__inherit__graph.md5  classXBot_1_1matlogger2_1_1thread-members.html  classXBot_1_1matlogger2_1_1thread__coll__graph.map  classboost_1_1lockfree_1_1detail_1_1compile__time__sized__ringbuffer__inherit__graph.map  classboost_1_1lockfree_1_1detail_1_1ringbuffer__base__inherit__graph.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions_vars.html  index.html  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_3.md5  inherit_graph_7.map  mat__appender_8cpp.html  mat__appender_8cpp__incl.md5  matio__backend_8cpp.html  matio__backend_8h_source.html  matlogger2_8h__dep__incl.md5  matlogger2_8h__incl.map  matlogger2__backend_8cpp_source.html  namespaceXBot_1_1matlogger2.html  (+6 more)
matio/: Makefile  cmake_install.cmake
matio-cmake/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
release/: matlogger2-1.0.0-Linux.deb  matlogger2-1.0.1-Linux.deb
search/: all_10.js  all_15.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  all_d.js  classes_0.js  classes_5.js  classes_6.js  classes_8.js  enums_0.js  files_0.js  files_4.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_6.js  functions_b.js  functions_e.js  pages_0.js  searchdata.js  typedefs_6.js  typedefs_8.js  typedefs_9.js  typedefs_c.js  variables_2.js  variables_3.js  variables_6.js
src/: cond_test.cpp  logger.cpp  mat_appender.cpp  mat_data.cpp  mat_reader.cpp  matio_backend.cpp  matio_backend.h  matlogger2.cpp  matlogger2_backend.cpp  matlogger2_backend.h  matlogger_manager.cpp  test_main.cpp  thread.h  thread_replacement.h  var_buffer.cpp
tests/: BackendTest.cpp  CMakeLists.txt  ReadTests.cpp  TestApi.cpp  WriteTest.cpp  profile_test.cpp
(+101 files in other folders)
